--- a/src/app/templates/smithy.component.html
+++ b/src/app/templates/smithy.component.html
@@ -1,79 +1,7 @@
 <headerClient>
 </headerClient>
-<section class="planet-section" style="margin-bottom: 120px;">
-    <div class="container with-light-line-and-glow w-container ">
-        <div data-duration-in="300" data-duration-out="100" class="w-tabs">
-
-            <div class="tabs-content w-tab-content">
-                <div data-w-tab="The Moon" class="tab-pane w-tab-pane w--tab-active news_block" style="opacity: 1; transition: opacity 300ms;padding-left: 288px;">
-                    <div class="destination-heading">
-                        <div class="col-md-12">
-                            <div class="row">
-                                <h4 class="heading-3">Pick a card to forge</h4>
-                            </div>
-                            <div class="row">
-                                    <div class="dropdown">
-                                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownFactionButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Select a faction
-                                        </button>
-                                        <div class="dropdown-menu" aria-labelledby="dropdownFactionButton">
-                                            <a class="dropdown-item" href="#">Faction A</a>
-                                            <a class="dropdown-item" href="#">Faction B</a>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                                        </div>
-                                    </div>
-                                <div class="col-md-2">
-                                    <div class="dropdown">
-                                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownTypeButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Select a type of card
-                                        </button>
-                                        <div class="dropdown-menu" aria-labelledby="dropdownTypeButton">
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Ship</a>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-2">
-                                    <div class="dropdown">
-                                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownCardButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Select a card
-                                        </button>
-                                        <div class="dropdown-menu" aria-labelledby="dropdownCardButton">
-                                            <a class="dropdown-item" href="#">Card A</a>
-                                            <a class="dropdown-item" href="#">Card B</a>
-                                            <a class="dropdown-item" href="#">Card C</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <!-- TODO DISPLAY SELECTED CARD HERE-->
-                                    <!--<img src="">-->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-2 offset-md-10 buyButton">
-                                    <a (click)="forge()">Forge</a>
-                                    <div class="corner-upper-left"></div>
-                                    <div class="corner-upper-right"></div>
-                                    <div class="corner-bottom-right"></div>
-                                    <div class="corner-bottom-left"></div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="alert alert-danger" *ngIf="errorMessage">
-                                    {{ errorMessage }}
-                                </div>
-                                <div class="alert alert-success" *ngIf="successMessage">
-                                    Booster bought ! You now can find your cards in your collection.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="left-side-white left-side-white--news" style="margin-top: 70px;max-height:unset;"></div>
-    </div>
-</section>
+<div class="content">
+    <button class="list-button cards" [routerLink]="['/smithy/cards_list']"><span class="button-inner">Liste des cartes</span></button>
+    <button class="list-button decks" [routerLink]="['/smithy/decks_list']"><span class="button-inner">Liste des decks</span></button>
+</div>
 <logister></logister>
