--- a/src/app/templates/shop.component.html
+++ b/src/app/templates/shop.component.html
@@ -45,7 +45,7 @@
                     <div class="corner-bottom-right"></div>
                     <div class="corner-bottom-left"></div>
                 </div>
-                <div class="name-block valid" id="validPayment" (click)="boosterAppear()">
+                <div class="name-block valid" id="validPayment" (click)="buyBooster()">
                     <div class="name">Acheter</div>
                     <div class="corner-upper-left"></div>
                     <div class="corner-upper-right"></div>
@@ -62,6 +62,7 @@
     <div id="cards_list" class="cards-list">
         <img *ngFor="let card of boosterCards; let i = index" src="../../assets/img/back.png" alt="card-{{i}}" id="card_{{i}}" class="cards-booster" (click)="rotateCard(i)" />
     </div>
+    <div class="list-card-black-screen" id="list-card-black-screen"></div>
     <div class="name-block close-button-animation" id="close-button-animation" (click)="closeAnimation()">
         <div class="name">Fermer</div>
         <div class="corner-upper-left"></div>
