--- a/src/assets/css/shop.component.css
+++ b/src/assets/css/shop.component.css
@@ -221,7 +221,7 @@ div.booster-block div.line {
     background-color: white;
     position: fixed;
     left: 0;
-    margin-left: 24%;
+    margin-left: 39.5%;
     top: 50%;
     box-shadow: 0px 1px 1px #f1f1f1, 0px 2px 2px #e1e1e1, 0px 3px 3px #d1d1d1, 0px -1px 1px #f1f1f1, 0px -2px 2px #e1e1e1, 0px -3px 3px #d1d1d1;
 }
@@ -238,14 +238,15 @@ div.cards-list {
     height: 100%;
     opacity: 0;
     display: none;
+    z-index: 13;
 }
 
 div.cards-list img.cards-booster {
-    width: 48%;
-    margin-left: 26%;
+    width: 20%;
+    margin-left: 40%;
     height: auto;
     position: fixed;
-    margin-top: 54%;
+    margin-top: 10%;
 }
 
 div.cards-list.show {
@@ -254,13 +255,31 @@ div.cards-list.show {
 
 div.name-block.close-button-animation {
     position: fixed;
-    width: 100%;
+    width: 30%;
     max-height: 40px;
     font-size: 20px;
     display: none;
+    top: 0;
+    left: 0;
+    z-index: 13;
 }
 
-button.close-button-animation.show {
+div.name-block.close-button-animation.show {
+    display: block;
+}
+
+div.list-card-black-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 12;
+}
+
+div.list-card-black-screen.show {
     display: block;
 }
 
